MSCSE-25: fix string error, fix history clicks

--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Calculator</string>
     <string name="all_evaluations_button_name">История</string>
     <string name="existing_evaluation_button_name">Назад</string>
-    <string name="evaluation_error_toast">Ошыбка в выражении</string>
+    <string name="reload_all_evaluations_page">Перезагрузить</string>
+    <string name="evaluation_error_toast">Ошибка в выражении</string>
 </resources>
